--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-file-upload": "^2.5.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "captchapng": "0.0.1",
